add book integration tests